add optional middle for non-user, user and admin
