# config/swagger.yaml
@@ -50,8 +50,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     get: #done
-      description: Get a part of products to show on shop client
-      summary: Get a part of products to show on shop client
+      description: Get a part of products to show on shop client (non-user, user, admin)
+      summary: Get a part of products to show on shop client (non-user, user, admin)
       tags:
         - Product
       parameters:
@@ -78,19 +78,25 @@ paths:
           required: false 
           schema:
             type: string
-          description: Sort product by date (newest/latest)
+          description: Sort products by date (newest/latest)
         - in: query
           name: priceOrder
           required: false
           schema: 
             type: string
-          description: Sort product by price (asc/desc)
+          description: Sort products by price (asc/desc)
         - in: query
           name: category
           required: false
           schema:
             type: string
           description: Product category name
+        - in: query
+          name: status
+          required: false
+          schema:
+            type: string
+          description: Sort products by status (disabled/notDisabled/all)        
       responses:
         '200':
           description: Success
@@ -110,41 +116,41 @@ paths:
                     description: total product in 1 page
                     items:
                       $ref: '#/components/schemas/Product'
-        '204':
-          description: No products found for this keyword
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+        # '204':
+        #   description: No products found for this keyword
+        #   content:
+        #     application/json:
+        #       schema:
+        #         $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/v1/product/all: #done
-    get:
-      summary: Return all products of store
-      description: This api requires authorization with token JWT
-      tags:
-        - Product
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Product'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+  # /api/v1/product/all: #done
+  #   get:
+  #     summary: Return all products of store
+  #     description: This api requires authorization with token JWT
+  #     tags:
+  #       - Product
+  #     security:
+  #       - bearerAuth: []
+  #     responses:
+  #       '200':
+  #         description: Success
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: '#/components/schemas/Product'
+  #       '401':
+  #         description: Unauthorized
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Error'
   /api/v1/product/{id}: #done
     get: 
       summary: Get matched product with given id (product detail)
@@ -538,6 +544,19 @@ paths:
       description: Get all users by admin
       tags:
         - User
+      parameters:
+        - in: query
+          name: dateOrder
+          required: false 
+          schema:
+            type: string
+          description: Sort users by date (newest/latest)
+        - in: query
+          name: status
+          required: false
+          schema: 
+            type: string
+          description: Filter users by status (disabled/notDisabled/all)        
       responses:
         '200':
           description: Success
@@ -865,12 +884,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     get:
-      summary: Users get their orders
-      description: Users get their orders
+      summary: Admin get orders
+      description: Admin get orders
       tags:
         - Order
       security:
         - bearerAuth: []
+      parameters:
+        - in: query
+          name: dateOrder
+          required: false 
+          schema:
+            type: string
+          description: Sort orders by date (newest/latest)
+        - in: query
+          name: status
+          required: false
+          schema: 
+            type: string
+          description: Filter orders by status (disabled/notDisabled/all)
       responses:
         '200':
           description: Success
@@ -884,14 +916,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/v1/order/all:
+  /api/v1/order/ordered:
     get:
-      summary: Get all orders
-      description: Get all orders
+      summary: User get their orders
+      description: User get their orders
       tags:
         - Order
       security:
         - bearerAuth: []
+      parameters:
+        - in: query
+          name: dateOrder
+          required: false 
+          schema:
+            type: string
+          description: Sort orders by date (newest/latest)
       responses:
         '200':
           description: Success
@@ -900,53 +939,7 @@ paths:
               schema:
                 type: array
                 items:
-                  allOf:
-                    - type: object
-                      properties:
-                        shippingAddress:
-                          $ref: '#/components/schemas/ShippingAddress'
-                    - type: object
-                      properties:
-                        user:
-                          $ref: '#/components/schemas/OrderedUser'
-                    - type: object
-                      properties:
-                        orderItems:
-                          type: array
-                          items:
-                            $ref: '#/components/schemas/OrderItemWithID'
-                    - type: object
-                      properties:
-                        _id: 
-                          type: string
-                          description: Order ID
-                        patmentMethod:
-                          type: string
-                          description: Payment method
-                          default: "Paypal"
-                        taxPrice:
-                          type: number
-                          description: Tax price
-                          default: 0.0
-                        shippingPrice:
-                          type: number
-                          description: Shipping price
-                          default: 0.0         
-                        totalPrice:
-                          type: number
-                          description: Total price
-                          default: 0.0 
-                        isPaid:
-                          type: boolean
-                          description: Is paid yet ?
-                          default: 0.0 
-                    
-        '400':
-          description: No order items
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+                    $ref: '#/components/schemas/Order'                 
         '401':
           description: Unauthorized
           content:
@@ -1243,10 +1236,23 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     get:
-      summary:  User get all categories
-      description: User get all categories 
+      summary:  Get all categories (non-user, user, admin)
+      description: Get all categories (non-user, user, admin)
       tags:
         - Category
+      parameters:
+        - in: query
+          name: dateOrder
+          required: false 
+          schema:
+            type: string
+          description: Sort categories by date (newest/latest)
+        - in: query
+          name: status
+          required: false
+          schema: 
+            type: string
+          description: Filter categories by status (disabled/notDisabled/all) 
       responses:
         '200':
           description: Success
@@ -1256,21 +1262,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Category'
-  /api/v1/category/all:
-    get:
-      summary:  Admin get all categories 
-      description: Admin get all categories 
-      tags:
-        - Category
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Category' 
+  # /api/v1/category/all:
+  #   get:
+  #     summary:  Admin get all categories 
+  #     description: Admin get all categories 
+  #     tags:
+  #       - Category
+  #     responses:
+  #       '200':
+  #         description: Success
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: '#/components/schemas/Category' 
   /api/v1/category/{id}: 
     put:
       summary: Update exsited category
@@ -1490,14 +1496,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/v1/producer/all: 
+  /api/v1/producer/: 
     get:
-      summary:  User get all categories of store
-      description: User get all categories of store
+      summary:  Get all producers (admin)
+      description: Get all producers (admin)
       tags:
         - Producer
       security:
         - bearerAuth: []
+      parameters:
+        - in: query
+          name: dateOrder
+          required: false 
+          schema:
+            type: string
+          description: Sort producers by date (newest/latest)
+        - in: query
+          name: status
+          required: false
+          schema: 
+            type: string
+          description: Filter producers by status (disabled/notDisabled/all)           
       responses:
         '200':
           description: Success
@@ -1507,6 +1526,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Category'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'                  
   /api/v1/producer/{id}: 
     put:
       summary: Update existed producer
@@ -1904,7 +1929,7 @@ paths:
           required: false 
           schema:
             type: string
-          description: Sort product by date (newest/latest)
+          description: Sort comments by date (newest/latest)
         - in: query
           name: status
           required: false
